# data_warehouse_visualisation

./: .eslintrc.js  .gitignore  GEMINI.md  README.md  jsconfig.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  repomix.sh  requirements.txt
data/: .~lock.legacy_data.csv#  legacy_data.csv  warehouse_feeds.csv
plans/: robustness_improvement.md
static/css/: style.css
static/js/: app.js  globals.d.ts
templates/: index.html
