[project]
name = "data-lineage-visualizer"
version = "0.1.0"
description = "Data Lineage Visualizer with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "python-multipart",
    "jinja2",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-setuptools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
